--- a/whatsapp/client/main.html
+++ b/whatsapp/client/main.html
@@ -1,5 +1,5 @@
 <head>
-  <title>whatsapp</title>
+  <title>Ionic2-MeteorCLI-WhatsApp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
